@@ -1,4 +1,5 @@
 Version 1.1.0-CVS (?? ??? 2006)
+ - Impemented RFE 1470722: option to disable 2nd entry of cross-day event
  - Fixed bug 1448727: Conflict changes national characters
  - Fixed bug 1477303: CVS Cross-Day events bug
  - Fixed bug 1474888: Timezone issue on updated timestamp (1.1.cvs)
